; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/extr_image_transfer.c_image_transfer_is_valid.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/extr_image_transfer.c_image_transfer_is_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @image_transfer_is_valid(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %12 [
    i32 129, label %7
    i32 131, label %8
    i32 128, label %9
    i32 132, label %10
    i32 130, label %11
  ]

7:                                                ; preds = %2
  br label %12

8:                                                ; preds = %2
  br label %12

9:                                                ; preds = %2
  br label %12

10:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %13

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %2, %11, %9, %8, %7
  store i32 0, i32* %3, align 4
  br label %13

13:                                               ; preds = %12, %10
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
